--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ag-charts-react": "^9.2.1",
-    "apexcharts": "^3.48.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.4",
     "sanitize-html": "^2.13.0",
     "web-vitals": "^2.1.4"
   },
